# qm-playground

./: CLAUDE.md  Cargo.toml
crates/sim-core/: Cargo.toml
crates/sim-core/src/: integrator.rs  lib.rs  potential.rs  units.rs  wavefunction.rs
crates/sim-core/src/dirac/: integrator.rs  mod.rs
crates/sim-core/src/spinor/: integrator.rs  mod.rs  wavefunction.rs
crates/sim-core/src/two_particle/: entanglement.rs  integrator.rs  mod.rs  potential.rs  wavefunction.rs
crates/viewer/: Cargo.toml
crates/viewer/src/: app.rs  colormap.rs  main.rs
docs/: 00-project-vision.md  01-quantum-mechanics-primer.md  02-architecture.md
docs/lessons/: 01-implementation-walkthrough.md  01-single-particle-qm.md  02-implementation-walkthrough.md  02-two-particle-qm.md  03-identical-particles.md  03-implementation-walkthrough.md  04-implementation-walkthrough.md  04-spin.md  05-dirac-equation.md  05-implementation-walkthrough.md
